Part2/Exercise_2.01/manifests/log_reader_pod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-reader-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-reader
  template:
    metadata:
      labels:
        app: log-reader
    spec:
      containers:
        - name: log-reader
          image: viksil/log_output_reader:2.01
