Part2/Exercise_2.01/manifests/log_reader_pod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-reader-service
spec:
  type: ClusterIP
  selector:
    app: log-reader
  ports:
    - port: 3022
      protocol: TCP
      targetPort: 3022
