Part2/Exercise_2.01/manifests/log_reader_pod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-reader-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-reader-service
            port:
              number: 3022
